--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-654.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林), server: 213.183.53.177, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇺🇸 美国-4.72MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.52MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.98MB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.65MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.63MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.45MB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.29MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.04MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇮🇳 印度-1.65MB/s(Youtube:不良林), server: aicoo6du.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: aicoo6du.com}}
+  - {name: 🇺🇸 美国-5.40MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-3.48MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.92MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-563.1KB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-3.08MB/s(Youtube:不良林), server: 213.183.53.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇯🇵 日本-1.17MB/s(Youtube:不良林), server: 43.128.253.82, port: 31372, type: vmess, uuid: 2a9056a7-bf92-40c8-f155-1e14aac9beba, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.65MB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-654.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇮🇳 印度-563.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-654.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇮🇳 印度-563.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-654.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇮🇳 印度-563.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-654.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇮🇳 印度-563.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-654.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇮🇳 印度-563.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-654.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇮🇳 印度-563.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-654.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇮🇳 印度-563.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
