--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-817.7KB/s(Youtube:不良林), server: 213.183.59.214, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇨🇳 中国-18.70MB/s(Youtube:不良林), server: ingress-i2.onebox6.org, port: 38101, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.onebox6.org}}
-  - {name: 🇺🇸 美国-4.83MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-1.98MB/s(Youtube:不良林), server: 213.183.59.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇯🇵 日本-5.19MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.92MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-563.1KB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.69MB/s(Youtube:不良林), server: 213.183.59.214, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
+  - {name: 🇳🇱 荷兰-1.37MB/s(Youtube:不良林), server: 213.183.59.214, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇸🇬 新加坡-3.98MB/s(Youtube:不良林), server: 13.250.126.43, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-5.11MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-3.21MB/s(Youtube:不良林), server: 213.183.53.177, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 捷克-689.5KB/s(Youtube:不良林), server: ce.rutracker-cn.com, port: 443, type: trojan, password: 5y8y3CwxRVYhyfSY, sni: ce.rutracker-cn.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.87MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林), server: 213.183.53.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇯🇵 日本-13.36MB/s(Youtube:不良林), server: 43.128.253.82, port: 31372, type: vmess, uuid: 2a9056a7-bf92-40c8-f155-1e14aac9beba, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇯🇵 日本-2.65MB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-817.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇮🇳 印度-563.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.21MB/s(Youtube:不良林)
+      - 捷克-689.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-817.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇮🇳 印度-563.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.21MB/s(Youtube:不良林)
+      - 捷克-689.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-817.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇮🇳 印度-563.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.21MB/s(Youtube:不良林)
+      - 捷克-689.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-817.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇮🇳 印度-563.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.21MB/s(Youtube:不良林)
+      - 捷克-689.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-817.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇮🇳 印度-563.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.21MB/s(Youtube:不良林)
+      - 捷克-689.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-817.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇮🇳 印度-563.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.21MB/s(Youtube:不良林)
+      - 捷克-689.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-817.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇮🇳 印度-563.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.21MB/s(Youtube:不良林)
+      - 捷克-689.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
