--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-1.69MB/s(Youtube:不良林), server: 213.183.59.214, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
-  - {name: 🇳🇱 荷兰-1.37MB/s(Youtube:不良林), server: 213.183.59.214, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇸🇬 新加坡-3.98MB/s(Youtube:不良林), server: 13.250.126.43, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-3.27MB/s(Youtube:不良林), server: 38.143.66.99, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-5.11MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.21MB/s(Youtube:不良林), server: 213.183.53.177, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 捷克-689.5KB/s(Youtube:不良林), server: ce.rutracker-cn.com, port: 443, type: trojan, password: 5y8y3CwxRVYhyfSY, sni: ce.rutracker-cn.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.87MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林), server: 213.183.53.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇯🇵 日本-2.65MB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.40MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-3.80MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
+  - {name: 捷克-734.1KB/s(Youtube:不良林), server: v2cross.com.05.v2ce.com, port: 443, type: trojan, password: kGrwqmB1nEKUsDwE, sni: v2cross.com.05.v2ce.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.97MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇯🇵 日本-21.24MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-20.51MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.21MB/s(Youtube:不良林)
-      - 捷克-689.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 捷克-734.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.51MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.21MB/s(Youtube:不良林)
-      - 捷克-689.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 捷克-734.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.51MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.21MB/s(Youtube:不良林)
-      - 捷克-689.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 捷克-734.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.51MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.40MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.21MB/s(Youtube:不良林)
-      - 捷克-689.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 捷克-734.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.51MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.21MB/s(Youtube:不良林)
-      - 捷克-689.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 捷克-734.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.51MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.21MB/s(Youtube:不良林)
-      - 捷克-689.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 捷克-734.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.51MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.21MB/s(Youtube:不良林)
-      - 捷克-689.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 捷克-734.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.51MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
